about styling, changed images to auto in an attempt to stop squishyness

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -77,3 +77,13 @@
 		column-count: 1 !important;
 	}
 }
+
+#top-section{
+  margin-bottom: -65px;
+}
+
+@media(max-width: 800px){
+  #top-section{
+    margin-bottom: 0px;
+  }
+}
